# beyondfa_average

./: .dockerignore  Dockerfile  LICENSE.md  README.md  pyproject.toml
Inputs/: dwi-4d-acquisition-metadata.json
Inputs/images/dwi-4d-brain-mri/: dwmri.mha
Outputs/: features-128.json
scripts/: entrypoint.sh  extract_metric.py  run_metric.sh  unnecessary.py
